packages/yew-macro/tests/function_component_attr/generic-props-fail.stderr
error[E0412]: cannot find type `INVALID` in this scope
  --> tests/function_component_attr/generic-props-fail.rs:25:19
   |
20 | fn compile_fail() {
   |                - help: you might be missing a type parameter: `<INVALID>`
...
25 |     html! { <Comp<INVALID> /> };
   |                   ^^^^^^^ not found in this scope

error[E0599]: no method named `build` found for struct `PropsBuilder<PropsBuilderStep_missing_required_prop_a>` in the current scope
  --> tests/function_component_attr/generic-props-fail.rs:22:14
   |
3  | #[derive(Clone, Properties, PartialEq)]
   |                 ---------- method `build` not found for this
...
22 |     html! { <Comp<Props> /> };
   |              ^^^^ method not found in `PropsBuilder<PropsBuilderStep_missing_required_prop_a>`

error[E0277]: the trait bound `MissingTypeBounds: yew::Properties` is not satisfied
  --> tests/function_component_attr/generic-props-fail.rs:27:14
   |
27 |     html! { <Comp<MissingTypeBounds> /> };
   |              ^^^^ the trait `yew::Properties` is not implemented for `MissingTypeBounds`
   |
   = note: required because of the requirements on the impl of `FunctionProvider` for `comp<MissingTypeBounds>`

error[E0599]: the function or associated item `new` exists for struct `VChild<FunctionComponent<comp<MissingTypeBounds>>>`, but its trait bounds were not satisfied
  --> tests/function_component_attr/generic-props-fail.rs:27:14
   |
27 |     html! { <Comp<MissingTypeBounds> /> };
   |              ^^^^ function or associated item cannot be called on `VChild<FunctionComponent<comp<MissingTypeBounds>>>` due to unsatisfied trait bounds
   |
  ::: $WORKSPACE/packages/yew/src/functional/mod.rs
   |
   | pub struct FunctionComponent<T: FunctionProvider + 'static> {
   | ----------------------------------------------------------- doesn't satisfy `_: yew::Component`
   |
   = note: the following trait bounds were not satisfied:
           `FunctionComponent<comp<MissingTypeBounds>>: yew::Component`

error[E0107]: missing generics for type alias `Comp`
  --> tests/function_component_attr/generic-props-fail.rs:30:14
   |
30 |     html! { <Comp /> };
   |              ^^^^ expected 1 type argument
   |
note: type alias defined here, with 1 type parameter: `P`
  --> tests/function_component_attr/generic-props-fail.rs:8:22
   |
8  | #[function_component(Comp)]
   |                      ^^^^
9  | fn comp<P>(_props: &P) -> Html
   |         -
help: use angle brackets to add missing type argument
   |
30 |     html! { <Comp<P> /> };
   |                  ^^^
